# robo-cam-calib

./: README.md  pyproject.toml
assets/kortex_description/grippers/robotiq_2f_85/meshes/collision/: robotiq_arg2f_85_inner_finger.stl  robotiq_arg2f_85_inner_knuckle.stl  robotiq_arg2f_85_outer_finger.stl  robotiq_arg2f_85_outer_knuckle.stl
assets/kortex_description/grippers/robotiq_2f_85/meshes/visual/: robotiq_arg2f_85_base_link.stl  robotiq_arg2f_85_base_link_realsense.stl  robotiq_arg2f_85_inner_finger.stl  robotiq_arg2f_85_inner_knuckle.stl  robotiq_arg2f_85_outer_finger.stl  robotiq_arg2f_85_outer_knuckle.stl  robotiq_arg2f_85_pad.stl
assets/kortex_description/grippers/robotiq_2f_85/urdf/: robotiq_arg2f.xacro
assets/kortex_description/launch/: visualize.launch
assets/kortex_description/robots/: gen3_robotiq_2f_85.urdf  gen3_robotiq_2f_85.xacro  gen3_robotiq_2f_85_reflect_cam.urdf
robo_cam_calib/utils/: kinova_utils.py
scripts/: robot_rs_merged.py  test-pyrs-api.py  viser_robot.py  viser_robot_realsense.py
utils/: kinova_utils.py
