[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-cam-calib"
authors = [
    {name = "Siddharth Karamcheti", email="skaramcheti@cs.stanford.edu"}
]
description = "Robot Camera Calibration: robo-cam-calib"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine learning"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [

]

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "pre-commit",
    "ruff",
    "yourdfpy"  # yourdfpy <path/to/urdf> to viz urdf
]

[project.urls]
homepage = "https://github.com/kevin-thankyou-lin/robo-cam-calib"
repository = "https://github.com/kevin-thankyou-lin/robo-cam-calib"
documentation = "https://github.com/kevin-thankyou-lin/robo-cam-calib"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache"]

[tool.black]
line-length = 121
target-version = ["py38", "py39", "py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py38"
select = ["A", "B", "C90", "E", "F", "I", "RUF", "W"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
